# PulseAI

./: .env copy.example  .gitignore  LICENSE  README.md  app.py  orchestrator.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  dependency-review.yml
agents/: agent1_fetch.js  agent2_organize.js  agent3_summarize.js  agent4_publish.js
backend/: llm_factory.py  orchestrator.js  orchestrator.py  package.json
backend/agents/: agent1_fetch.js  agent2_organize.js  agent3_summarize.js  agent4_publish.js  analyst_agent.js  analyst_agent.py  paper_writer_agent.py  publisher_agent.js  publisher_agent.py  research_gap_agent.py  researcher_agent.js  researcher_agent.py  synthesizer_agent.js  synthesizer_agent.py  trend_agent.js  trend_agent.py
backend/config/: sources.js  sources.py  tokens.js  tokens.py
backend/tests/: conftest.py  test_analyst_agent.py  test_integration.py  test_publisher_agent.py  test_researcher_agent.py  test_synthesizer_agent.py  test_trend_agent.py
config/: sources.json  tokens.json
frontend/: app.py  pyproject.toml
