[project]
name = "pulseai"
version = "0.1.0"
description = "Multi-agent pipeline for latest AI updates"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "crewai>=0.80.0",
    "crewai-tools>=0.14.0",
    "duckduckgo-search>=6.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle, pyflakes, isort
ignore = ["E501"]               # line too long — handled by formatter

[tool.ruff.format]
quote-style = "double"
